# celes

./: CMakeLists.txt  LICENSE
celes/: CMakeLists.txt  main.c
libceles/: CMakeLists.txt  celes-parser-lexer.c  celes-parser.c  celes-parser.h
libceles/util/: bmem.h  circlebuf.h  darray.h  dstr.c  dstr.h  hash.c  hash.h  lexer.c  lexer.h  platform-nix.c  platform-windows.c  platform.c  platform.h  toml.c  toml.h  utf8.c  util-defs.h
tests/: CMakeLists.txt  test-toml.c
